<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailTodoActivity">

    <data>
        <variable
            name="todo"
            type="com.example.kepo.model.Todo" />
    </data>

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/ll_arrowBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/iv_back_arrow"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_arrow_back"
                    android:clickable="true"/>
            </LinearLayout>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_todo"
                android:textSize="35dp"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_edited"
                    android:textSize="15dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="20dp"/>
                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="20dp"/>
                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </LinearLayout>
        
        <ImageView
            android:id="@+id/iv_editTodo"
            android:padding="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_create"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@layout/circle_button"
            android:visibility="gone"
            />

        <ProgressBar
            android:id="@+id/pb_load"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

    </RelativeLayout>
</layout>