<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyTodoActivity">

    <data>
        <variable
            name="todo"
            type="com.example.kepo.model.Todo" />
    </data>

    <RelativeLayout
        android:id="@+id/rl_mytodo"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/ll_arrowBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/iv_back_arrow"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_arrow_back"
                    android:clickable="true"/>
            </LinearLayout>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_todo"
                android:textSize="35dp"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/here_all_your_todos"
                    android:textSize="15dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:padding="1dp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_todos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/tv_nodata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:visibility="invisible"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_addTodo"
            android:padding="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_add"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@layout/circle_button"
            />

        <ProgressBar
            android:id="@+id/pb_load"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

    </RelativeLayout>
</layout>