<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SearchUserActivity">

    <data>
        <variable
            name="user"
            type="com.example.kepo.model.User" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_arrowBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/iv_back_arrow"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_arrow_back"
                    android:clickable="true"/>
                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:inputType="text"
                    android:background="@layout/rounded_border_edittext"
                    android:hint="@string/search_user"
                    android:padding="10dp"/>
                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_search"
                    android:layout_marginLeft="15dp"
                    android:clickable="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_arrowBack"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_resFor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result_for"
                    android:textSize="15dp"
                    android:layout_marginLeft="10dp"
                    android:visibility="invisible"/>
                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:padding="20dp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
            
            <TextView
                android:id="@+id/tv_nodata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:visibility="invisible"/>
        </LinearLayout>
        
        <ProgressBar
            android:id="@+id/pb_load"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>


    </RelativeLayout>
</layout>